# TaskManager

./: README.md  app.py  database.py  pyproject.toml
templates/: ReadyTasks.html  addtask.html  creategroup.html  edittask.html  enterGroup.html  home.html  index.html  login.html  signup.html  tagProgress.html  updateItem.html
